# puda-knowledge-repository

./: .dockerignore  .env  .env.example  .gitignore  .replit  16-Legal.md  CHECK_DEPLOYMENT_LOGS.md  CHECK_LOGS_GUIDE.md  CLOUD_RUN_STARTUP_FIX.md  CLOUD_SQL_MIGRATION_PLAN.md  CREATE_FILE_8_TABLES.sql  CREATE_RESPONSE_CACHE_TABLE.sql  DATABASE_URL_REQUIREMENT.md  DEBUG_DEPLOYMENT.md  DEBUG_QUERY_ISSUE.md  DEEP_MODE_STORAGE_VALIDATION.md  DEEP_MODE_VALIDATION_SUMMARY.md  DEPENDENCIES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SANITY_CHECK.md  DIAGNOSE_REPORT_GENERATOR.md  Dockerfile  EMBEDDED_EKG_ENGINE.md  ENVIRONMENT_VARIABLES.md  FIX_DATABASE_PASSWORD.md  FIX_REPORT_GENERATOR_ACCESS.md  GCLOUD_DEPLOYMENT_WORKFLOW.md  GOOGLE_CLOUD_ENV_VARS.md  IMPORTANT_USE_CONVERTED_FILES.md  LOAD_FILE_7.md  MIGRATION_SUMMARY.md  README.md  RFP_RAG_IMPLEMENTATION_ROADMAP.md  SANITY_CHECK_SUMMARY.md  SUPABASE_MIGRATION.md  SWITCH_BACK_TO_DATABASE_STORAGE.md  SWITCH_TO_SUPABASE.md  TROUBLESHOOT_DEPLOYMENT.md  VERIFY_SUPABASE_USAGE.md  (+9 more)
client/: index.html
ekg_engine/: .env.example  pyproject.toml  requirements.txt
ekg_engine/agents/: ekg_agent.py
ekg_engine/agents/tools/: answer_formatting.py  intent_clarification.py
ekg_engine/api/: domains.py  google_drive.py  main.py  schemas.py  security.py  settings.py  task_store.py  vector_store.py
ekg_engine/api/static/css/: styles.css
ekg_engine/api/static/js/: admin.js
ekg_engine/api/templates/: admin_dashboard.html  layout.html  login.html
ekg_engine/ekg_core/: __init__.py  core.py  v2_workflow.py
server/: db.ts  (+6 more)
(+170 files in other folders)
