[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "ekg-agent"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "openai>=2.21,<3",
  "networkx>=3.2",
  "numpy>=1.24",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "rapidfuzz>=3.9",
  "requests>=2.0",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "passlib[bcrypt]>=1.7",
  "httpx>=0.28,<1",
  "google-api-python-client>=2.131",
  "google-auth>=2.34",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2",
  "google-cloud-storage>=2.10",
]

[tool.hatch.build.targets.wheel]
packages = ["ekg_core", "agents", "api"]
